Adding a global CSS file

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -33,4 +33,4 @@ section .polygons {
   .hide_on_mobile {
     display: none; } }
 
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=global.css.map */
