--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,3 +1,9 @@
+// sass --watch assets/scss/index.scss:assets/css/index.css
+
+body {
+  width:100%;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -27,46 +33,50 @@ header {
 }
 
 
-.menu-toggler__label {
-    position: relative;
-    width: 35px;
-}
-
-
-.menu-toggler__label__visual {
-
-  span {
-    position: absolute;
-    width: 100%;
-    height: 6px;
-    background-color: #000;
-    transition: transform .5s, top .5s, bottom .5s, opacity .2s;
-    opacity: 1;
-  }
-
-  span:nth-child(1){}
-
-  span:nth-child(2) {
-    top: 9px;
-  }
-
-  span:nth-child(3) {
-    top:18px;
-  }
-
-}
+// .menu-toggler__label {
+//     position: relative;
+//     width: 35px;
+// }
+//
+//
+// .menu-toggler__label__visual {
+//
+//   span {
+//     position: absolute;
+//     width: 100%;
+//     height: 6px;
+//     background-color: #000;
+//     transition: transform .5s, top .5s, bottom .5s, opacity .2s;
+//     opacity: 1;
+//   }
+//
+//   span:nth-child(1){}
+//
+//   span:nth-child(2) {
+//     top: 9px;
+//   }
+//
+//   span:nth-child(3) {
+//     top:18px;
+//   }
+//
+// }
 
 section {
   picture {
 
+    source {
+    }
+
     img {
       position: absolute;
       z-index: 0;
+      width:100%;
 
     }
 
     .home_desktop {
-    
+
     }
 
     .home_mobile {
@@ -82,7 +92,7 @@ section {
 
   .polygons {
     z-index:1 ;
-    transform: rotate(90deg);
+
   }
 }
 
@@ -90,13 +100,14 @@ section {
   display:none;
 }
 
-@media screen and (max-width : 550px) {
+
+@media screen and (max-width : 600px) {
   .show_on_mobile {
     display:block;
   }
 }
 
-@media screen and (max-width : 550px) {
+@media screen and (max-width : 600px) {
   .hide_on_mobile {
     display:none;
   }
