--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,7 +1,7 @@
 // sass --watch assets/scss/index.scss:assets/css/index.css
 
 body {
-  width:100%;
+  margin:0;
 }
 
 header {
@@ -18,6 +18,11 @@ header {
     max-width: 300px;
   }
 
+  button {
+    background:none;
+    border:none;
+  }
+
   div {
     :first-child {
       white-space:pre-line;
@@ -28,39 +33,8 @@ header {
       font-weight: bold;
     }
   }
-
-
 }
 
-
-// .menu-toggler__label {
-//     position: relative;
-//     width: 35px;
-// }
-//
-//
-// .menu-toggler__label__visual {
-//
-//   span {
-//     position: absolute;
-//     width: 100%;
-//     height: 6px;
-//     background-color: #000;
-//     transition: transform .5s, top .5s, bottom .5s, opacity .2s;
-//     opacity: 1;
-//   }
-//
-//   span:nth-child(1){}
-//
-//   span:nth-child(2) {
-//     top: 9px;
-//   }
-//
-//   span:nth-child(3) {
-//     top:18px;
-//   }
-//
-// }
 
 section {
   picture {
@@ -72,15 +46,7 @@ section {
       position: absolute;
       z-index: 0;
       width:100%;
-
-    }
-
-    .home_desktop {
-
-    }
-
-    .home_mobile {
-
+      height: 100%;
     }
 
   }
@@ -88,16 +54,59 @@ section {
   .polygonbox {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+
+    svg {
+      transform: rotate(90deg);
+    }
+
+
   }
+
+  .polygon1 {
+    transform: translate(6%, 6%);
+  }
+  .polygon2 {
+    transform: translate(-8%, 48%);
+  }
+  .polygon3 {
+    transform: translate(6%, -10%);
+  }
+  .polygon4 {
+    transform: translate(-8%, 32%);
+  }
+
+
 
   .polygons {
     z-index:1 ;
+    width:43%;
 
+    path {
+      stroke:rgb(255, 255, 255);
+      stroke-width:2.031px;
+      stroke-linecap:butt;
+      stroke-linejoin:miter;
+      fill-opacity:0.251;
+      fill:rgb(41, 41, 41);
+
+
+    }
   }
 }
 
 .show_on_mobile {
   display:none;
+}
+
+footer {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  bottom:0;
+  padding: 2%;
+  background-color: #000;
+  text-align: center;
 }
 
 
