--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,24 +27,64 @@ section .polygonbox {
   justify-content: center; }
   section .polygonbox svg {
     transform: rotate(90deg); }
-section .polygon1 {
-  transform: translate(6%, 6%); }
-section .polygon2 {
-  transform: translate(-8%, 48%); }
-section .polygon3 {
-  transform: translate(6%, -10%); }
-section .polygon4 {
-  transform: translate(-8%, 32%); }
 section .polygons {
   z-index: 1;
-  width: 43%; }
+  width: 43%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  section .polygons div {
+    position: absolute;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    width: 70%;
+    text-align: center;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    section .polygons div img {
+      width: 20px;
+      display: none; }
   section .polygons path {
     stroke: white;
     stroke-width: 2.031px;
     stroke-linecap: butt;
     stroke-linejoin: miter;
     fill-opacity: 0.251;
-    fill: #292929; }
+    fill: #292929;
+    transition: .3s; }
+section .polygon1 {
+  transform: translate(6%, 6%); }
+  section .polygon1:hover img {
+    display: block; }
+  section .polygon1:hover path {
+    fill-opacity: 1;
+    fill: #f4887e; }
+section .polygon2 {
+  transform: translate(-7%, 49%); }
+  section .polygon2:hover img {
+    display: block; }
+  section .polygon2:hover path {
+    fill-opacity: 1;
+    fill: #98c67f; }
+section .polygon3 {
+  transform: translate(6%, -8%); }
+  section .polygon3:hover img {
+    display: block; }
+  section .polygon3:hover path {
+    fill-opacity: 1;
+    fill: #5a8fa6; }
+section .polygon4 {
+  transform: translate(-8%, 35%); }
+  section .polygon4:hover img {
+    display: block; }
+  section .polygon4:hover path {
+    fill-opacity: 1;
+    fill: #fcc04b; }
 
 .show_on_mobile {
   display: none; }
