--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,5 @@
 body {
+  font-family: arial;
   margin: 0; }
   body #headband {
     display: flex;
@@ -32,16 +33,21 @@ header {
       font-weight: bold; }
 
 main {
-  background: url(../images/image_home_mobile.png);
-  background-size: cover;
-  background-repeat: no-repeat;
   width: 100vw;
   height: calc(98vh - ( 8vh + 6vh ) ); }
+  main section nav ul {
+    margin: 0;
+    list-style-type: none;
+    color: #FFF;
+    margin-left: 4vw;
+    font-weight: bold;
+    font-size: 41px; }
   main section .polygonbox {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    max-width: 122vh; }
     main section .polygonbox svg {
       transform: rotate(90deg); }
   main section .polygon1 {
@@ -148,12 +154,28 @@ main {
   white-space: pre-wrap; }
 
 @media screen and (max-width: 600px) {
+  main {
+    background: url(../images/image_home_mobile.png);
+    background-size: cover;
+    background-repeat: no-repeat; }
+
   .hide_on_mobile {
     display: none; }
 
   .hide_on_desktop {
     display: flex; } }
+@media screen and (max-width: 900px) {
+  .hide_on_mobile_and_tablets {
+    display: none; } }
+@media screen and (min-width: 601px) and (max-width: 899px) {
+  .polygon4 {
+    transform: translate(0%, -25%) !important; } }
 @media screen and (min-width: 601px) {
+  main {
+    background: url(../images/image_home.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+
   main section .polygonbox svg {
     transform: rotate(0); }
 
@@ -162,5 +184,9 @@ main {
 
   #basicfooter {
     display: flex; } }
+@media screen and (min-width: 901px) {
+  .hide_on_mobile_and_tablets {
+    display: flex;
+    transform: translate(50%, -25%) !important; } }
 
 /*# sourceMappingURL=index.css.map */
