--- a/assets/scss/document.scss
+++ b/assets/scss/document.scss
@@ -1,10 +1,10 @@
 body{
   background-color: rgb(248, 248, 248);
+  margin: 0px;
 }
 
 .document{
   font-family: arial;
-  margin: 0px;
   font-size: 14px;
   max-width: 700px;
   margin: auto;
@@ -255,4 +255,64 @@ h2{
 
 button, label{
   cursor: pointer
+}
+
+$headerHeight: 6vh;
+
+header {
+  display: flex;
+  justify-content: space-between;
+  height: $headerHeight;
+  background-color: white;
+
+  img {
+    max-height: 30px;
+    max-width: 300px;
+    align-self: center;
+  }
+
+  button {
+    background:none;
+    border:none;
+  }
+
+  div {
+    align-self: center;
+    :first-child {
+      white-space:pre-line;
+    }
+
+    .year {
+      font-size: 35px;
+      font-weight: bold;
+    }
+  }
+}
+
+@media screen and (max-width : 600px) {
+  .show_on_mobile {
+    display:block;
+  }
+  .show_on_desktop{
+    display:none;
+  }
+}
+@media screen and (min-width : 600px) {
+  .show_on_mobile {
+    display:none;
+  }
+  .show_on_desktop{
+    display:block;
+  }
+}
+@media screen and (max-width : 700px) {
+  header{
+    padding-top: 5px;
+  }
+  h1{
+    padding-left: 5px;
+  }
+  h2{
+    padding-left: 5px;
+  }
 }
