--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,11 +3,12 @@ body {
   margin: 0; }
   body #headband {
     display: flex;
-    padding: 2%;
     align-items: center;
     background-color: #103084;
     color: white;
     height: 8vh; }
+    body #headband p {
+      margin: 0; }
     body #headband img {
       border: solid #284591;
       border-radius: 50%;
@@ -33,8 +34,7 @@ header {
       font-weight: bold; }
 
 main {
-  width: 100vw;
-  height: calc(98vh - ( 8vh + 6vh ) ); }
+  height: calc(100vh - ( 8vh + 6vh ) ); }
   main section nav ul {
     margin: 0;
     list-style-type: none;
@@ -46,8 +46,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    max-width: 122vh; }
+    align-items: center; }
     main section .polygonbox svg {
       transform: rotate(90deg); }
   main section .polygon1 {
@@ -78,11 +77,25 @@ main {
     main section .polygon4:hover path {
       fill-opacity: 1;
       fill: #fcc04b; }
+  main section .polygon5:hover img {
+    display: block; }
+  main section .polygon5:hover path {
+    fill-opacity: 1;
+    fill: #a69d57; }
+  main section .polygon6:hover img {
+    display: block; }
+  main section .polygon6:hover path {
+    fill-opacity: 1;
+    fill: #98c67f; }
+  main section .polygon7:hover img {
+    display: block; }
+  main section .polygon7:hover path {
+    fill-opacity: 1;
+    fill: #e79655; }
 
 .polygons {
   z-index: 1;
   width: 42%;
-  max-width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -166,9 +179,15 @@ main {
     display: flex; } }
 @media screen and (max-width: 900px) {
   .hide_on_mobile_and_tablets {
-    display: none; } }
+    display: none; }
+
+  .polygonbox {
+    max-width: 122vh; }
+
+  .polygons {
+    max-width: 300px; } }
 @media screen and (min-width: 601px) and (max-width: 899px) {
-  .polygon4 {
+  #polygon4 {
     transform: translate(0%, -25%) !important; } }
 @media screen and (min-width: 601px) {
   main {
@@ -188,5 +207,17 @@ main {
   .hide_on_mobile_and_tablets {
     display: flex;
     transform: translate(50%, -25%) !important; } }
+@media screen and (min-width: 901px) and (max-width: 1200px) {
+  .polygonbox {
+    max-width: 90%; }
+
+  .polygons {
+    width: 26%; } }
+@media screen and (min-width: 1200px) {
+  .polygonbox {
+    max-width: 967px; }
+
+  .polygons {
+    max-width: 243px; } }
 
 /*# sourceMappingURL=index.css.map */
