--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,9 +4,12 @@ body {
   body #headband {
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #103084;
     color: white;
-    height: 8vh; }
+    height: 8vh;
+    padding-left: 15px;
+    padding-right: 15px; }
     body #headband p {
       margin: 0; }
     body #headband img {
@@ -45,50 +48,35 @@ main {
   main section .polygonbox {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center; }
     main section .polygonbox svg {
       transform: rotate(90deg); }
   main section .polygon1 {
     transform: translate(0%, 9%); }
-    main section .polygon1:hover img {
-      display: block; }
     main section .polygon1:hover path {
       fill-opacity: 1;
       fill: #f4887e; }
   main section .polygon2 {
     transform: translate(-14%, 52%); }
-    main section .polygon2:hover img {
-      display: block; }
     main section .polygon2:hover path {
       fill-opacity: 1;
       fill: #98c67f; }
   main section .polygon3 {
     transform: translate(0%, -5%); }
-    main section .polygon3:hover img {
-      display: block; }
     main section .polygon3:hover path {
       fill-opacity: 1;
       fill: #5a8fa6; }
   main section .polygon4 {
     transform: translate(-14%, 38%); }
-    main section .polygon4:hover img {
-      display: block; }
     main section .polygon4:hover path {
       fill-opacity: 1;
       fill: #fcc04b; }
-  main section .polygon5:hover img {
-    display: block; }
   main section .polygon5:hover path {
     fill-opacity: 1;
     fill: #a69d57; }
-  main section .polygon6:hover img {
-    display: block; }
   main section .polygon6:hover path {
     fill-opacity: 1;
     fill: #98c67f; }
-  main section .polygon7:hover img {
-    display: block; }
   main section .polygon7:hover path {
     fill-opacity: 1;
     fill: #e79655; }
@@ -102,20 +90,26 @@ main {
   align-items: center; }
   .polygons div {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 10px;
     text-decoration: none;
     color: white;
     font-weight: bold;
     width: 70%;
-    text-align: center;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
+    z-index: 1; }
     .polygons div img {
       width: 20px;
-      display: none;
-      align-self: center; }
+      align-self: center;
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 0s, opacity 0.2s linear; }
+  .polygons:hover img {
+    visibility: visible;
+    opacity: 1; }
   .polygons path {
     stroke: white;
     stroke-width: 2.031px;
@@ -130,33 +124,43 @@ main {
 
 #mobilefooter {
   background-color: black;
-  margin-top: -41px;
+  margin-top: -37px;
   width: 43px; }
 
 #basicfooter {
   color: lightgrey;
   justify-content: space-between;
   align-items: flex-end;
-  margin-top: -72px; }
+  margin-top: -90px; }
 
 .leftpart {
   background-color: #232321;
   padding: 15px; }
   .leftpart img {
     width: 18px; }
+  .leftpart :nth-child(2) {
+    color: grey; }
   .leftpart p {
-    margin: 0; }
+    margin: 0;
+    text-align: center; }
 
 .middlepart p {
   align-self: center;
   margin: 0; }
+.middlepart a {
+  text-decoration: none;
+  color: grey; }
 
-.rightpart p {
-  margin: 0; }
-.rightpart .socialmedia_icons {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-end; }
+.rightpart {
+  margin: 9px; }
+  .rightpart p {
+    margin-bottom: 8px; }
+  .rightpart .socialmedia_icons {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end; }
+    .rightpart .socialmedia_icons img {
+      opacity: .6; }
 
 .icons {
   color: white;
@@ -164,7 +168,8 @@ main {
 
 .icons::after {
   content: " | ";
-  white-space: pre-wrap; }
+  white-space: pre-wrap;
+  color: darkgrey; }
 
 @media screen and (max-width: 600px) {
   main {
@@ -182,40 +187,50 @@ main {
     display: none; }
 
   .polygonbox {
-    max-width: 122vh; }
+    max-width: 57vh;
+    justify-content: center; }
 
   .polygons {
     max-width: 300px; } }
-@media screen and (min-width: 601px) and (max-width: 899px) {
-  #polygon4 {
-    transform: translate(0%, -25%) !important; } }
 @media screen and (min-width: 601px) {
+  header img {
+    margin-left: 26px; }
+
   main {
-    background: url(../images/image_home.jpg);
+    background: url(../images/image_home_large.jpg);
     background-size: cover;
     background-repeat: no-repeat; }
 
+  #basicfooter {
+    display: flex; } }
+@media screen and (min-width: 901px) {
   main section .polygonbox svg {
     transform: rotate(0); }
 
   .polygons {
     transform: translate(0%, 0%) !important; }
 
-  #basicfooter {
-    display: flex; } }
-@media screen and (min-width: 901px) {
   .hide_on_mobile_and_tablets {
     display: flex;
-    transform: translate(50%, -25%) !important; } }
+    transform: translate(50%, -25%) !important; }
+
+  .polygon2 {
+    display: none; } }
 @media screen and (min-width: 901px) and (max-width: 1200px) {
   .polygonbox {
     max-width: 90%; }
 
   .polygons {
     width: 26%; } }
+@media screen and (max-width: 1200px) {
+  .polygonbox {
+    margin-left: auto;
+    margin-right: auto; } }
 @media screen and (min-width: 1200px) {
   .polygonbox {
-    max-width: 967px; }
+    max-width: 808px;
+    margin-left: auto;
+    margin-right: auto; }
 
   .polygons {
     max-width: 243px; } }
